; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/io/extr_vatpit.c_vatpit_get_out.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/io/extr_vatpit.c_vatpit_get_out.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vatpit = type { i32, %struct.channel* }
%struct.channel = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vatpit*, i32)* @vatpit_get_out to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vatpit_get_out(%struct.vatpit* %0, i32 %1) #0 {
  %3 = alloca %struct.vatpit*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.channel*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.vatpit* %0, %struct.vatpit** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.vatpit*, %struct.vatpit** %3, align 8
  %9 = getelementptr inbounds %struct.vatpit, %struct.vatpit* %8, i32 0, i32 1
  %10 = load %struct.channel*, %struct.channel** %9, align 8
  %11 = load i32, i32* %4, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.channel, %struct.channel* %10, i64 %12
  store %struct.channel* %13, %struct.channel** %5, align 8
  %14 = load %struct.channel*, %struct.channel** %5, align 8
  %15 = getelementptr inbounds %struct.channel, %struct.channel* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  switch i32 %16, label %34 [
    i32 128, label %17
  ]

17:                                               ; preds = %2
  %18 = call i32 (...) @sbinuptime()
  %19 = load %struct.channel*, %struct.channel** %5, align 8
  %20 = getelementptr inbounds %struct.channel, %struct.channel* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = sub nsw i32 %18, %21
  %23 = load %struct.vatpit*, %struct.vatpit** %3, align 8
  %24 = getelementptr inbounds %struct.vatpit, %struct.vatpit* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = sdiv i32 %22, %25
  store i32 %26, i32* %6, align 4
  %27 = load %struct.channel*, %struct.channel** %5, align 8
  %28 = getelementptr inbounds %struct.channel, %struct.channel* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %6, align 4
  %31 = sub nsw i32 %29, %30
  %32 = icmp sle i32 %31, 0
  %33 = zext i1 %32 to i32
  store i32 %33, i32* %7, align 4
  br label %35

34:                                               ; preds = %2
  store i32 0, i32* %7, align 4
  br label %35

35:                                               ; preds = %34, %17
  %36 = load i32, i32* %7, align 4
  ret i32 %36
}

declare dso_local i32 @sbinuptime(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
